--- a/flip_coin/pubspec.yaml
+++ b/flip_coin/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  image_sequence_animator:
+    git:
+      url: 'https://github.com/Lmanskee/flutter-image-sequence-animator.git'
+      path: 'image_sequence_animator'
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +65,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/coinSequence
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
