--- a/flip_coin/pubspec.yaml
+++ b/flip_coin/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  lottie: ^1.2.2 
+  rive: ^0.7.22
 
 dev_dependencies:
   flutter_test:
@@ -64,12 +64,12 @@ flutter:
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-  assets:
-    - assets/coin.json
-    
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
+  
+  assets:
+    - assets/coinflip.riv
+    
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
