--- a/flip_coin/pubspec.yaml
+++ b/flip_coin/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
   
   assets:
     - assets/coinflip.riv
+    - assets/playpausebutton.riv
     
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
