Preparando App para PlayStore

--- a/flip_coin/ios/Runner/Info.plist
+++ b/flip_coin/ios/Runner/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>flip_coin</string>
+	<string>Flip Coin</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
