--- a/flip_coin/android/app/src/main/AndroidManifest.xml
+++ b/flip_coin/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flip_coin">
    <application
-        android:label="flip_coin"
+        android:label="Flip Coin"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
