--- a/flip_coin/pubspec.yaml
+++ b/flip_coin/pubspec.yaml
@@ -74,8 +74,13 @@ flutter:
   # https://flutter.dev/assets-and-images/#from-packages
   
   assets:
+    # Riv files  
     - assets/coins/coinflip-default.riv
     - assets/coins/coinflip-half-dollar.riv
+  
+    # PNG files
+    - assets/coins/pngs/default.png
+    - assets/coins/pngs/half-dollar-coin.png
     
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
