--- a/flip_coin/android/app/src/main/AndroidManifest.xml
+++ b/flip_coin/android/app/src/main/AndroidManifest.xml
@@ -32,3 +32,6 @@
             android:value="2" />
     </application>
 </manifest>
+
+<uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
