--- a/flip_coin/pubspec.yaml
+++ b/flip_coin/pubspec.yaml
@@ -73,7 +73,10 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
 
-
+  assets:
+    - assets/coinflip-default.riv
+    - assets/coinflip-half-dollar.riv
+    - assets/json/current_animation.json
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
