--- a/flip_coin/pubspec.yaml
+++ b/flip_coin/pubspec.yaml
@@ -75,8 +75,9 @@ flutter:
   # https://flutter.dev/assets-and-images/#from-packages
 
   assets:
-    - assets/
-    - assets/json/currentAnimation.json
+    - assets/coinflip-default.riv
+    - assets/coinflip-half-dollar.riv
+    - assets/current-animation.json
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
