--- a/flip_coin/pubspec.yaml
+++ b/flip_coin/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   rive: ^0.8.4
+  path_provider: ^2.0.9
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +79,7 @@ flutter:
   assets:
     - assets/coinflip-default.riv
     - assets/coinflip-half-dollar.riv
-    - assets/current-animation.json
+    - assets/current_animation.json
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
