--- a/flip_coin/.gitignore
+++ b/flip_coin/.gitignore
@@ -45,3 +45,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Private informations
+/android/app/src/main/AndroidManifest.xml
+
